--- a/scss/_contacts.scss
+++ b/scss/_contacts.scss
@@ -341,6 +341,18 @@
 
     .contact-info {
         padding-left: 32px;
+        height: calc(100vh - 75px);
+        overflow-y: scroll;
+
+        &::-webkit-scrollbar {
+            width: 5px;
+            height: 5px;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            border-radius: 7px;
+            background: #A8A8A8;
+        }
 
         .contact-headline {
             display: flex;
@@ -388,7 +400,7 @@
                         margin-bottom: 16px;
                     }
 
-                    .add-task {
+                    .contact-add-task {
                         margin-top: 18px;
                         cursor: pointer;
                         font-size: 16px;
